--- a/public/05_组件-注册局部组件.html
+++ b/public/05_组件-注册局部组件.html
@@ -23,6 +23,11 @@
   <template id="product">
     <div class="product">
       <h2>{{title}}</h2>
+      <div>
+        <p>
+          {{删除我！！回退我？？？}}
+        </p>
+      </div>
       <p>商品描述, 限时折扣, 赶紧抢购</p>
       <p>价格: {{price}}</p>
       <button>收藏</button>
